<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:shrinkColumns="*"
    android:stretchColumns="2">
    <TableRow
        android:id="@+id/manufacturer_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/manufacturer_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manufacturer_tv" />
        <EditText
            android:id="@+id/manufacturer_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/manufacturer_et"
            android:inputType="textPersonName"
            android:layout_span="2"
            android:text=""/>
    </TableRow>
    <TableRow
        android:id="@+id/model_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/model_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_tv" />
        <EditText
            android:id="@+id/model_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/model_et"
            android:inputType="textPersonName"
            android:layout_span="2"
            android:text=""/>
    </TableRow>
    <TableRow
        android:id="@+id/android_version_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/android_version_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/android_version_tv" />
        <EditText
            android:id="@+id/android_version_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/android_et"
            android:inputType="textPersonName"
            android:layout_span="2"
            android:text=""/>
    </TableRow>
    <TableRow
        android:id="@+id/web_site_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/web_site_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_site_tv" />
        <EditText
            android:id="@+id/web_site_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/website_et"
            android:inputType="textPersonName"
            android:layout_span="2"
            android:text=""/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/web_site_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/web_site_bt"/>
        <Button
            android:id="@+id/cancel_bt"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:text="@string/cancel_bt"/>
        <Button
            android:id="@+id/save_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_bt"
            android:visibility="gone"
            />
    </TableRow>
</TableLayout>